Jave 1.8 + fonction activable